# phosphor

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  phosphor-projectbrief.md  plan.md
backend/: .env.example  Dockerfile  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_phase2_tables.py  003_phase3_tables.py  004_phase4_tables.py  005_agent_tables.py  006_lab_state_imports.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  loop.py  persistence.py  tools.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  api_key_auth.py  audit.py  config.py  database.py  rate_limit.py  security.py
backend/app/models/: __init__.py  adoption_event.py  agent.py  api_key.py  audit.py  distillation.py  document.py  lab.py  lab_state.py  lab_state_import.py  literature_scan.py  opportunity.py  paper.py  protocol.py  signal.py
backend/app/schemas/: __init__.py  agent.py  api_key.py  document.py  experiment.py  feedback.py  lab.py  lab_state.py  lab_state_import.py  literature_scan.py  matching.py  metrics.py  opportunity.py  paper.py  protocol.py  search.py  signal.py
backend/app/services/: api_keys.py  capability_extraction.py  distillation.py  documents.py  experiments.py  extraction.py  literature.py  matching.py  metrics.py  openalex.py  orcid.py  protocols.py  pubmed.py  search.py  semantic_scholar.py  storage.py
backend/app/tasks/: __init__.py  agents.py  distill.py  import_orcid.py  literature.py
backend/tests/: __init__.py  conftest.py  test_api_key_auth.py  test_audit.py  test_capability_extraction.py  test_documents_service.py  test_experiments_api.py  test_experiments_service.py  test_feedback_api.py  test_health.py  test_matching_service.py  test_metrics_service.py  test_openalex_client.py  test_orcid_client.py  test_protocol_service.py  test_pubmed_client.py  test_routing.py  test_schemas.py  test_schemas_phase2.py  test_schemas_phase3.py  test_search_service.py  test_security.py  test_semantic_scholar_client.py
backend/tests/agents/: test_loop.py  test_prompts.py  test_tools.py
backend/tests/api/: test_directions_strengthen.py  test_reviewer.py
backend/tests/models/: test_agent.py
backend/tests/tasks/: test_agents.py
evals/: conftest.py  pyproject.toml
evals/distillation/: __init__.py  test_compression.py  test_fidelity.py  test_signal_injection.py
evals/distillation/fixtures/: cell_bio_lab.json  genomics_lab.json  protein_lab.json
evals/extraction/: conftest.py  test_capability_extraction.py  test_field_coverage.py  test_precision_recall.py  test_quality_scoring.py
evals/extraction/fixtures/: biology_abstracts.json  capability_papers.json  chemistry_abstracts.json  edge_cases.json  physics_abstracts.json
evals/matching/: conftest.py  test_gap_detection.py  test_protocol_heuristics.py  test_ranking_correlation.py
evals/reviewer/: conftest.py  harness.py  test_harness.py  test_reviewer_eval.py
(+72 files in other folders)
